fix: fixed gap at modal and orderCard

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -41,11 +41,11 @@
 .menu__items {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  gap: 30px;
   height: 100%;
   width: 100%;
+  max-height: 40%;
 }
 
 .menu__item {
